--- a/MTIC.css
+++ b/MTIC.css
@@ -101,16 +101,6 @@ body {
 }
 
 .logoInsta {
-  height: 60px; /* Startgröße */
-  transition: transform 0.5s ease, height 0.5s ease;
-}
-
-.social-section.expanded .logoInsta {
-  transform: translateY(-20%); /* Bewegt das Logo nach oben */
-  height: 150px; /* Neue Größe des Logos */
-}
-
-.logoInsta {
   transition: transform 0.5s ease, height 0.5s ease;
   height: 60px; /* Startgröße */
   align-self: center; /* Stellt sicher, dass das Logo zentriert ist */
@@ -120,7 +110,7 @@ body {
 }
 
 .social-section.expanded .logoInsta {
-  transform: translateY(0px) translateX(-550px); /* Verschiebt das Logo nach oben links */
+  transform: translate3d(20px, -150px, 0); /* Nutzt 3D-Transformation */
   height: 150px; /* Vergrößert das Logo */
   align-self: flex-start;
   margin-top: 40px;
@@ -164,7 +154,8 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Intensiverer Schatten für den Aktivzustand */
 }
 /*=============================================Bis hier ist es das Grundgerüst==============================*/
-.gallery-container-tiktok {
+.gallery-container-tiktok,
+.gallery-container-insta {
   display: none;
   width: 50%;
   max-width: 500px; /* Anpassen basierend auf dem gewünschten Layout */
@@ -173,12 +164,14 @@ body {
   margin: 20px auto;
 }
 
-.gallery-slider-tiktok {
+.gallery-slider-tiktok,
+.gallery-slider-insta {
   display: flex;
   transition: transform 0.5s ease;
 }
 
-.gallery-slider-tiktok img {
+.gallery-slider-tiktok img,
+.gallery-slider-insta img {
   width: 100%; /* Jedes Bild nimmt die volle Breite des Containers ein */
   flex-shrink: 0; /* Verhindert das Verzerren der Bilder */
 }
@@ -205,8 +198,13 @@ button.prev {
 button.next {
   right: 10px;
 }
+
 .social-section.expanded .gallery-container-tiktok {
   display: block; /* Zeigt die Galerie nur im expandierten Zustand */
+}
+
+.social-section.expanded .gallery-container-insta {
+  display: block;
 }
 
 button.prev.disabled,
@@ -218,6 +216,35 @@ button.next.disabled {
 button.disabled {
   opacity: 0.5;
   cursor: not-allowed;
+}
+
+button.prev-insta,
+button.next-insta {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  z-index: 10;
+  opacity: 1;
+  cursor: pointer;
+}
+
+button.prev-insta {
+  left: 10px;
+}
+
+button.next-insta {
+  right: 10px;
+}
+
+button.prev-insta.disabled,
+button.next-insta.disabled {
+  opacity: 0.5;
+  cursor: default;
 }
 /*========================================MediaQuerry====================================*/
 @media (max-width: 800px) {
